<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.woact.morroo16.Fragments.InGameFragmentTop">


    <TextView
        android:id="@+id/txtVLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="17dp"
        android:text="@string/tvP1" />

    <TextView
        android:id="@+id/txtVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/vs"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtVRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtVLeft"
        android:layout_alignBottom="@+id/txtVLeft"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="59dp"
        android:layout_marginTop="17dp"
        android:text="@string/tvP2" />

    <Chronometer
        android:id="@+id/chrMetId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVS"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtVLeft"
        android:layout_below="@+id/txtVLeft"
        android:text="@string/btnTxtX"
        android:textColor="@color/colorRed"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtVRight"
        android:layout_below="@+id/txtVLeft"
        android:text="@string/btnTxtO"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>
