<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="no.woact.morroo16.Fragments.SignInFragment">


       <ImageView
           android:id="@+id/imgId"
           android:layout_width="match_parent"
           android:layout_height="300dp"
           android:scaleType="fitCenter"
           android:src="@drawable/tictacimage" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="100dp"
           android:orientation="horizontal">

              <TextView
                  android:id="@+id/txtVWp1ID"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/p1TxtVW" />

              <EditText
                  android:id="@+id/edt1P"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:hint="@string/enterName"
                  android:inputType="text" />

              <Button
                  android:id="@+id/btnOk1P"
                  android:layout_width="wrap_content"
                  android:layout_height="40dp"
                  android:text="@string/btnReady" />
       </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="100dp"
           android:orientation="horizontal">

              <TextView
                  android:id="@+id/txtVWp2ID"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/p2TxtVW" />


              <EditText
                  android:id="@+id/edt2P"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:hint="@string/enterName"
                  android:inputType="text" />

              <Button
                  android:id="@+id/btnOk2P"
                  android:layout_width="wrap_content"
                  android:layout_height="40dp"
                  android:text="@string/btnReady" />
       </LinearLayout>

       <Button
           android:id="@+id/btnPlayId"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:text="@string/btnPlay" />

       <Button
           android:id="@+id/btnHighScId"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:text="@string/btnHighScore" />
</LinearLayout>
