<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.woact.morroo16.Activity.HighscoresActivity">


    <TextView
        android:id="@+id/tvHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvHSList"
        android:textSize="40sp" />

    <ListView
        android:id="@+id/lvId"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_below="@+id/tvHigh"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnClearList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBack"
        android:layout_alignParentStart="true"
        android:text="@string/btnClear"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="414dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btnexit"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="462dp" />
</RelativeLayout>